# spdlog

./: CMakeLists.txt
cmake/: tweakme.h.in
include/spdlog/details/: pattern_formatter.h
